fix after code review